--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export":"next export"
+    "export": "next export"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
