--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.25.0",
     "next": "^11.1.2",
     "nodemailer": "^6.7.2",
