--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.26.1"
+    "react-hook-form": "^7.26.1",
+    "stripe": "^8.205.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
